--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.830.0",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-image-crop": "^11.0.10",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
