--- a/lambda/src/package.json
+++ b/lambda/src/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.774.0",
-    "esbuild": "^0.14.14"
+    "esbuild": "^0.14.14",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.2.0",
