--- a/lambda/src/package.json
+++ b/lambda/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.774.0",
     "esbuild": "^0.14.14",
+    "pdfkit": "^0.17.1",
     "sharp": "^0.34.2"
   },
   "devDependencies": {
