--- a/lambda/template.yaml
+++ b/lambda/template.yaml
@@ -1,7 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: >
-  Lambda function for Print Your Trip - RGB to CMYK image conversion
+Description: Lambda function for Print Your Trip - API version
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
@@ -29,28 +28,11 @@ Resources:
         - S3WritePolicy:
             BucketName: !Ref SourceBucket
       Events:
-        S3Event:
-          Type: S3
+        ApiEvent:
+          Type: Api
           Properties:
-            Bucket: !Ref SourceBucket
-            Events: s3:ObjectCreated:*
-            Filter:
-              S3Key:
-                Rules:
-                  - Name: suffix
-                    Value: -rgb.jpg
-                  - Name: suffix
-                    Value: -rgb.jpeg
-                  - Name: suffix
-                    Value: -rgb.png
-                  - Name: suffix
-                    Value: -rgb.gif
-                  - Name: suffix
-                    Value: -rgb.bmp
-                  - Name: suffix
-                    Value: -rgb.tiff
-                  - Name: suffix
-                    Value: -rgb.webp
+            Path: /
+            Method: post
 
   SourceBucket:
     Type: AWS::S3::Bucket
