--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "heic2any": "^0.0.4",
+    "lineicons": "^1.3.2",
     "motion": "^12.18.1",
     "pdfkit": "^0.17.1",
     "react": "^19.1.0",
