--- a/backend/src/config/resources.yml
+++ b/backend/src/config/resources.yml
@@ -1,3 +1,4 @@
+# src/config/resources.yml
 ImageBucket:
   Type: AWS::S3::Bucket
   Properties:
@@ -32,4 +33,22 @@ ImageBucketPolicy:
           Principal: "*"
           Action:
             - s3:GetObject
-          Resource: !Sub "${ImageBucket}/*"
+          Resource: !Join
+            - ''
+            - - !GetAtt ImageBucket.Arn
+              - '/*'
+        - Sid: AllowLambdaAccess
+          Effect: Allow
+          Principal:
+            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
+          Action:
+            - s3:GetObject
+            - s3:PutObject
+            - s3:DeleteObject
+            - s3:ListBucket
+          Resource:
+            - !GetAtt ImageBucket.Arn
+            - !Join
+              - ''
+              - - !GetAtt ImageBucket.Arn
+                - '/*'
