feat: integrate color-convert for accurate RGB to CMYK conversion and enhance logging

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "serverless": "^4.17.1",
     "@aws-sdk/client-s3": "^3.478.0",
-    "sharp": "^0.32.6",
+    "color-convert": "^3.1.0",
     "pdfkit": "^0.13.0",
+    "serverless": "^4.17.1",
+    "sharp": "^0.32.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
